    description = "junkyard application"

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'idea'
apply plugin: 'groovy'
apply plugin: 'jetty'

sourceCompatibility = "1.6"
targetCompatibility = "1.6"

projectName = 'junkyard'
group = "com.example"
version = "1.0-SNAPSHOT"


// loadConfiguration()

def loadConfiguration() {
    def environment = hasProperty('env') ? env : 'dev'
    setProperty 'environment', environment

    def propsFileName = "src/main/resources/${environment}.properties"
    def propsFile = new File(propsFileName)

    if (!propsFile.exists()) {
        throw new Exception("Unable to find DB properties for environemnt \"${environment}\"")
    }

    def properties = new Properties()
    properties.load(new FileInputStream(propsFile))

    setProperty 'dbProperties', properties
}

task updateDB(dependsOn: processResources) << {
    runLiquibase()
}

repositories {
    mavenCentral()

    // All things JBoss/Javassist/Hibernate
   //  mavenRepo url: "http://repository.jboss.org/nexus/content/groups/public/"

    // For stable versions of the tapx libraries
    // mavenRepo url: "http://howardlewisship.com/repository/"

    // For non-stable versions of the tapx libraries
    // mavenRepo url: "http://howardlewisship.com/snapshot-repository/"

    // For access to Apache Staging (Preview) packages
    // mavenRepo url: "https://repository.apache.org/content/groups/staging"

    mavenRepo url: "http://git.starpoint.com/m2"
    mavenRepo url: "http://nexus.devlab722.net/nexus/content/repositories/releases"
    mavenRepo url: "http://nexus.devlab722.net/nexus/content/repositories/snapshots"
    mavenLocal()

}

// This simulates Maven's "provided" scope, until it is officially supported by Gradle
// See http://jira.codehaus.org/browse/GRADLE-784

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
    test {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
}

dependencies {

    def tapestryVersion = '5.3.4'

    // This adds automatic compression of JavaScript and CSS in production mode:
    compile "org.apache.tapestry:tapestry-yuicompressor:5.3.1"

    //
    // Uncomment this to add support for file uploads:
    // compile "org.apache.tapestry:tapestry-upload:5.3.1"

    provided "javax.servlet:servlet-api:2.5"

    // compile "org.apache.tapestry:tapestry-hibernate:${tapestryVersion}"
    compile "org.apache.tapestry:tapestry-core:${tapestryVersion}"
    compile "org.apache.tapestry:tapestry-upload:${tapestryVersion}"
    compile 'com.trsvax.bootstrap:tapestry-bootstrap:2.0-SNAPSHOT'
    compile 'org.got5:tapestry5-jquery:3.3.0'
    compile 'org.hibernate:hibernate-validator:4.1.0.Final'
    compile 'org.hibernate:hibernate-commons-annotations:3.2.0.Final'
    compile 'commons-beanutils:commons-beanutils:1.8.3'
    compile 'commons-collections:commons-collections:3.2.1'
    compile 'org.apache.commons:commons-email:1.2'
    compile 'commons-lang:commons-lang:2.6'
    compile 'commons-validator:commons-validator:1.3.1'
    compile 'commons-net:commons-net:3.0.1'
    compile 'oro:oro:2.0.8'
    compile 'org.apache.poi:poi:3.7'
    compile 'com.starpoint:sp-common:1.0.0-SNAPSHOT'
    compile 'com.starpoint:querybuilder:1.5.0-SNAPSHOT'
    compile 'uk.org.cezary:t5conduit:0.8-SNAPSHOT'
    compile 'org.oscy:tapestry-zbreadcrumbs:0.0.2'
    groovy 'org.codehaus.groovy:groovy-all:1.8.6'
    testCompile "org.apache.tapestry:tapestry-test:${tapestryVersion}"
    testCompile "org.spockframework:spock-core:0.6-groovy-1.8"
    testCompile "org.spockframework:spock-tapestry:0.6-groovy-1.8"

    testRuntime 'javax.servlet:servlet-api:2.5'
}

test {
    useTestNG()

    options.suites("src/test/conf/testng.xml")

    systemProperties["tapestry.service-reloading-enabled"] = "false"
    systemProperties["tapestry.execution-mode"] = "development"

    maxHeapSize = "600M"

    jvmArgs("-XX:MaxPermSize=256M")

    enableAssertions = true
}

// TODO: Configure execution mode for jettyRun task
// File: build.gradle
task createWrapper(type: Wrapper) {
    gradleVersion = '1.0-milestone-8a'
}